DietPi-Software | Home Assistant: Resolved an issue with ARMv8 installation, where Python build would fail due to lack of build-essential: https://github.com/Fourdee/DietPi/issues/1255
DietPi-Software | MPD: Corrected various uninstallation issues.
DietPi-Software | APT Removal: Resolved an issue in Stretch, where held packages were not being removed: https://github.com/Fourdee/DietPi/issues/475
DietPi-Update | Resolved an issue where .update_available file would still exist in no network situations: https://github.com/Fourdee/DietPi/issues/1258
Patch_File | Auto swapfile generation no longer run twice (mostly for pre v150 images): https://github.com/Fourdee/DietPi/issues/1257

Allo Web Interface v4:
MPD: Native DSD playback support, when "Native" output freq/bit is set in MPD settings page: https://github.com/Fourdee/DietPi/issues/1241
MPD: Default data directory is now "/mnt", this will include all USB drives and network locations.
SQUEEZELITE: Added ability to set native DSD output modes. Please note, success of selected output mode is limited to DAC and kernel capabilities. We have verified Combo 384 with u32le output mode on Sparky SBC + USB Bridge: https://github.com/Fourdee/DietPi/issues/1237#issuecomment-348241209
O!MPD: Updated to 1.03. Please make sure to update your library (Settings > Update), to rescan the new "/mnt" location which includes all networked and USB drives. Depending on your additional storage setup, the rescan may take 5-30 minutes.

-----------------------------------------------------------------------------------------------------------

v158
(12/11/17)

Changes / Improvements / Optimizations:
DietPi-Services | status: Improved this command to highlight working and detail failed services. Failed services will also be listed. 'dietpi-services status': https://github.com/Fourdee/DietPi/issues/1230
DietPi-Software | Google AIY: Now available for installation: http://dietpi.com/phpbb/viewtopic.php?f=8&t=5&p=9486#p9486