@@ -2920,6 +2920,17 @@ _EOF_
 
 		fi
 		#-------------------------------------------------------------------------------
+		#XU4 FFMPEG: https://github.com/Fourdee/DietPi/issues/1273
+		if (( $HW_MODEL == 11 && $DISTRO == 3 )); then
+
+			cat << _EOF_ > /etc/apt/preferences.d/ffmpeg
+Package: *
+Pin: release a=jessie-backports
+Pin-Priority: 600
+_EOF_
+
+		fi
+		#-------------------------------------------------------------------------------
 
 	fi
 
