@@ -37,6 +37,7 @@ DietPi-Software | Syncthing: Resolved a permissions issue with self program upda
 DietPi-Software | Home Assistant: Resolved an issue with ARMv8 installation, where Python build would fail due to lack of build-essential: https://github.com/Fourdee/DietPi/issues/1255
 DietPi-Software | MPD: Corrected various uninstallation issues.
 DietPi-Software | APT Removal: Resolved an issue in Stretch, where held packages were not being removed: https://github.com/Fourdee/DietPi/issues/475
+DietPi-Software | FFMPEG: Resolved inability to install on XU4 Jessie: https://github.com/Fourdee/DietPi/issues/1273
 DietPi-Update | Resolved an issue where .update_available file would still exist in no network situations: https://github.com/Fourdee/DietPi/issues/1258
 Patch_File | Auto swapfile generation no longer run twice (mostly for pre v150 images): https://github.com/Fourdee/DietPi/issues/1257
 
